// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box bg prop sets background color 1`] = `
.c0 {
  background-color: #eafce7,#d2f9cd,#b7f5b0,#99f08d,#73eb64,#42e42d,#3cce29,#35b524,#2c971e,#206d16;
}

<div
  className="c0"
/>
`;

exports[`Box color prop sets color 1`] = `
.c0 {
  color: #e6f4fc,#cce7f8,#add9f5,#8bc9f0,#62b6eb,#2d9ee4,#298fce,#247db4,#1d6795,#154a6b;
}

<div
  className="c0"
  color="blue"
/>
`;

exports[`Box m prop sets margin 1`] = `
.c0 {
  margin: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box p prop sets padding 1`] = `
.c0 {
  padding: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box renders 1`] = `
<div
  className=""
/>
`;

exports[`Box width prop sets width 1`] = `
.c0 {
  width: 50%;
}

<div
  className="c0"
  width={0.5}
/>
`;
